--- a/app/assets/stylesheets/css3/_border-image.scss
+++ b/app/assets/stylesheets/css3/_border-image.scss
@@ -3,6 +3,8 @@
      -moz-border-image: border-add-prefix($images, moz);
        -o-border-image: border-add-prefix($images, o);
           border-image: border-add-prefix($images);
+
+  @include css-pie;
 }
 
 @function border-add-prefix($images, $vendor: false) {
