--- a/app/assets/stylesheets/css3/_border-radius.scss
+++ b/app/assets/stylesheets/css3/_border-radius.scss
@@ -2,6 +2,7 @@
   -webkit-border-radius: $radii;
      -moz-border-radius: $radii;
           border-radius: $radii;
+  @include css-pie;
 }
 
 @mixin border-top-left-radius($radii) {
@@ -9,6 +10,7 @@
      -moz-border-top-left-radius: $radii;
       -moz-border-radius-topleft: $radii;
           border-top-left-radius: $radii;
+  @include css-pie;
 }
 
 @mixin border-top-right-radius($radii) {
@@ -16,6 +18,7 @@
      -moz-border-top-right-radius: $radii;
       -moz-border-radius-topright: $radii;
           border-top-right-radius: $radii;
+  @include css-pie;
 }
 
 @mixin border-bottom-left-radius($radii) {
@@ -23,6 +26,7 @@
      -moz-border-bottom-left-radius: $radii;
       -moz-border-radius-bottomleft: $radii;
           border-bottom-left-radius: $radii;
+  @include css-pie;
 }
 
 @mixin border-bottom-right-radius($radii) {
@@ -30,6 +34,7 @@
      -moz-border-bottom-right-radius: $radii;
       -moz-border-radius-bottomright: $radii;
           border-bottom-right-radius: $radii;
+  @include css-pie;
 }
 
 @mixin border-top-radius($radii) {
